fdo#51763 - make title of dialog localisable

Following the bug report the title is currently not correctly
localisable for Catalan language due format issues.

Change-Id: I09107acb3f4acd7acf5a614216265373c59938b2